--- a/src/components/Footer/index.less
+++ b/src/components/Footer/index.less
@@ -1,9 +1,11 @@
 .footer {
   height: 60px;
   text-align: center;
+  background-color: #f0f2f5;
   color: #ccc;
+  padding: 20px 0;
 
   p {
-    margin: 20px 0;
+    margin: 0;
   }
 }
